force-app/main/default/objects/MD_Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Assignment &amp; Routing</fullName>
                <isActive>false</isActive>
                <label>Assignment &amp; Routing</label>
            </value>
            <value>
                <fullName>Closure</fullName>
                <isActive>false</isActive>
                <label>Closure</label>
            </value>
            <value>
                <fullName>Engineer Working</fullName>
                <isActive>false</isActive>
                <label>Engineer Working</label>
            </value>
            <value>
                <fullName>Initiate</fullName>
                <isActive>false</isActive>
                <label>Initiate</label>
            </value>
            <value>
                <fullName>Internal Case Logging</fullName>
                <isActive>false</isActive>
                <label>Internal Case Logging</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Pending Closure</fullName>
                <isActive>false</isActive>
                <label>Pending Closure</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
                <isActive>false</isActive>
                <label>Resolved</label>
            </value>
            <value>
                <fullName>Tracking &amp; Repair</fullName>
                <isActive>false</isActive>
                <label>Tracking &amp; Repair</label>
            </value>
            <value>
                <fullName>Visits Before Installation</fullName>
                <isActive>false</isActive>
                <label>Visits Before Installation</label>
            </value>
            <value>
                <fullName>Visits For Installation</fullName>
                <isActive>false</isActive>
                <label>Visits For Installation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>