force-app/main/default/objects/MD_Case__c/fields/Status_of_Material__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Material__c</fullName>
    <formula>TEXT( Machine_Installation__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status of Material</label>
    <type>Text</type>
</CustomField>