force-app/main/default/objects/MD_Case__c/fields/StopStartDate__c.field-meta.xml
<CustomField>
    <fullName>StopStartDate__c</fullName>
    <label>Stopped Since</label>
    <type>DateTime</type>
</CustomField>