force-app/main/default/objects/MD_Case__c/fields/SuppliedCompany__c.field-meta.xml
<CustomField>
    <fullName>SuppliedCompany__c</fullName>
    <label>Web Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>