force-app/main/default/objects/MD_Case__c/fields/SuppliedEmail__c.field-meta.xml
<CustomField>
    <fullName>SuppliedEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>