force-app/main/default/objects/MD_Case__c/fields/SuppliedName__c.field-meta.xml
<CustomField>
    <fullName>SuppliedName__c</fullName>
    <label>Web Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>