force-app/main/default/objects/MD_Case__c/fields/Tel__c.field-meta.xml
<CustomField>
    <fullName>Tel__c</fullName>
    <label>Tel:</label>
    <type>Phone</type>
</CustomField>