force-app/main/default/objects/MD_Case__c/fields/Time_to_Close_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Close_Days__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Close_Date__c)),
    DATEVALUE(Close_Date__c) - DATEVALUE(CreatedDate),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Close (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>