force-app/main/default/objects/MD_Case__c/fields/Trouble_Shooting__c.field-meta.xml
<CustomField>
    <fullName>Trouble_Shooting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trouble Shooting</label>
    <type>Checkbox</type>
</CustomField>