force-app/main/default/objects/MD_Case__c/fields/Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Troubleshooting</label>
    <type>Checkbox</type>
</CustomField>