force-app/main/default/objects/MD_Case__c/fields/Waiting_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Reason__c</fullName>
    <label>Waiting Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending with Customer</fullName>
            </value>
            <value>
                <fullName>Waiting for Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>