force-app/main/default/objects/MD_Case__c/fields/Warranty_Available__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Available</label>
    <type>Checkbox</type>
</CustomField>