force-app/main/default/objects/MD_Case__c/fields/Warranty_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expire_Date__c</fullName>
    <label>Warranty Expire Date</label>
    <type>Date</type>
</CustomField>