force-app/main/default/objects/MD_Case__c/fields/Water_Supply_conductivity__c.field-meta.xml
<CustomField>
    <fullName>Water_Supply_conductivity__c</fullName>
    <label>Water Supply conductivity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>