force-app/main/default/objects/MD_Case__c/fields/Work_Shop__c.field-meta.xml
<CustomField>
    <fullName>Work_Shop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Shop</label>
    <type>Checkbox</type>
</CustomField>