force-app/main/default/objects/MD_Case__c/fields/Working__c.field-meta.xml
<CustomField>
    <fullName>Working__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Working</label>
    <type>Checkbox</type>
</CustomField>