force-app/main/default/objects/MD_Case__c/recordTypes/Customer_Complaint.recordType-meta.xml
<RecordType>
    <fullName>Customer_Complaint</fullName>
    <active>true</active>
    <label>Customer Complaint</label>
</RecordType>