force-app/main/default/objects/MD_Case__c/recordTypes/Demo_Machine_Installed.recordType-meta.xml
<RecordType>
    <fullName>Demo_Machine_Installed</fullName>
    <active>true</active>
    <label>Machine Installation</label>
</RecordType>