force-app/main/default/objects/MD_Case__c/recordTypes/Demo_Machine_Return.recordType-meta.xml
<RecordType>
    <fullName>Demo_Machine_Return</fullName>
    <active>true</active>
    <label>Machine Recovery</label>
</RecordType>