force-app/main/default/objects/MD_Case__c/recordTypes/Email_to_case.recordType-meta.xml
<RecordType>
    <fullName>Email_to_case</fullName>
    <active>true</active>
    <label>Email to case</label>
</RecordType>