force-app/main/default/objects/MD_Case__c/recordTypes/Preventive_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Preventive_Maintenance</fullName>
    <active>true</active>
    <label>Preventive Maintenance</label>
</RecordType>