force-app/main/default/objects/MD_Case__c/validationRules/Closed_Validation_For_SerialNum.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Validation_For_SerialNum</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Machine_Installation__c)),ISPICKVAL(Status__c, &apos;Closed&apos;),AND(
  NOT(ISBLANK(Machine_Installation__r.Ship_To_Account__c)),
ISBLANK( Machine_Installation__r.Diagnostic_Machine__r.Serial_Number__c )
  ))</errorConditionFormula>
    <errorDisplayField>AssetId__c</errorDisplayField>
    <errorMessage>Cannot close Service Request: Missing Serial Number on Diagnostic Machine.</errorMessage>
</ValidationRule>