force-app/main/default/objects/MD_Case__c/validationRules/Closed_Validation_For_SerialNum_ShipToAc.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Validation_For_SerialNum_ShipToAc</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Machine_Installation__c)),ISPICKVAL(Status__c, &apos;Closed&apos;),AND(
  ISBLANK(Machine_Installation__r.Ship_To_Account__c),
ISBLANK( Machine_Installation__r.Diagnostic_Machine__r.Serial_Number__c )
  ))</errorConditionFormula>
    <errorMessage>Before Closed you need to filled Machine Installation Ship to Account and Diagnostic Machine Serial Number</errorMessage>
</ValidationRule>