force-app/main/default/objects/MD_Case__c/validationRules/Closed_Validation_For_ShipToAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Validation_For_ShipToAccount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Machine_Installation__c)),ISPICKVAL(Status__c, &apos;Closed&apos;),AND(
  ISBLANK(Machine_Installation__r.Ship_To_Account__c),
NOT(ISBLANK( Machine_Installation__r.Diagnostic_Machine__r.Serial_Number__c ))
  ))</errorConditionFormula>
    <errorDisplayField>Machine_Installation__c</errorDisplayField>
    <errorMessage>Cannot close Service Request: Missing Ship To Account on Machine Installation.</errorMessage>
</ValidationRule>