force-app/main/default/objects/MD_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Resolution_Description__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>AccountId__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>ContactId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>