force-app/main/default/objects/MD_Case__c/listViews/Asset_Installation_Cases_Record_type.listView-meta.xml
<ListView>
    <fullName>Asset_Installation_Cases_Record_type</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MD_Case__c.Demo_Machine_Installed</value>
    </filters>
    <label>Asset Installation Cases Record type</label>
</ListView>