force-app/main/default/objects/MD_Case__c/listViews/Asset_Recovery_Cases_Record_Type.listView-meta.xml
<ListView>
    <fullName>Asset_Recovery_Cases_Record_Type</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MD_Case__c.Demo_Machine_Return</value>
    </filters>
    <label>Asset Recovery Cases Record Type</label>
</ListView>