force-app/main/default/objects/MD_Case__c/listViews/Central_MD_Case.listView-meta.xml
<ListView>
    <fullName>Central_MD_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Central</label>
    <queue>Central</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>