force-app/main/default/objects/MD_Case__c/listViews/Customer_Complaint_Record_type.listView-meta.xml
<ListView>
    <fullName>Customer_Complaint_Record_type</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MD_Case__c.Customer_Complaint</value>
    </filters>
    <label>Customer Complaint Record type</label>
</ListView>