force-app/main/default/objects/MD_Case__c/listViews/Email_to_case_Record_type.listView-meta.xml
<ListView>
    <fullName>Email_to_case_Record_type</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MD_Case__c.Email_to_case</value>
    </filters>
    <label>Email to case Record type</label>
</ListView>