force-app/main/default/objects/MD_Case__c/listViews/General_MD_Case.listView-meta.xml
<ListView>
    <fullName>General_MD_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>General</label>
    <queue>General</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>