force-app/main/default/objects/MD_Case__c/listViews/North_MD_Case.listView-meta.xml
<ListView>
    <fullName>North_MD_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>North</label>
    <queue>North</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>