force-app/main/default/objects/MD_Case__c/listViews/Preventive_Maintenance.listView-meta.xml
<ListView>
    <fullName>Preventive_Maintenance</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MD_Case__c.Preventive_Maintenance</value>
    </filters>
    <label>Preventive Maintenance</label>
</ListView>