force-app/main/default/objects/MD_Case__c/listViews/South_MD_Case.listView-meta.xml
<ListView>
    <fullName>South_MD_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>South</label>
    <queue>South</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>